app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rotanakkosal-react-swarm-deployment
  labels:
    app: rotanakkosal-react-swarm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rotanakkosal-react-swarm
  template:
    metadata:
      labels:
        app: rotanakkosal-react-swarm
    spec:
      containers:
        - name: rotanakkosal-react-swarm
          image: kshrdautopilot/rotanakkosal-react-swarm:2023-12-01-03-11-50
          ports:
            - containerPort: 3000
